Rebrand from WeedJam to TeaJoy
Update branding, assets, and configuration to reflect new TeaJoy identity.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "weedjamco",
+  "name": "teashop",
   "version": "0.3.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3030",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
