--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --port 3030",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 4242",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "flowbite": "^1.8.1",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
