--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.12.2",
+    "fastify": "^5.6.1",
+    "fastify-plugin": "^5.1.0",
     "flowbite": "^1.8.1",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1",
